<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recipe">

    <!--android:text="@string/txtItem0\n@string/txtItem2\n@string/txtItem3\n@string/txtItem4"-->

    <Button
        android:id="@+id/btnGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="123dp"
        android:onClick="goBack"
        android:text="@string/btnGoBack" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="63dp"
        android:background="#FEFAFD"
        android:clickable="false"
        android:duplicateParentState="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/allIngredients"
        android:textAlignment="textStart"
        android:textColor="#424242" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="276dp"
        android:layout_height="99dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="210dp"
        android:background="#FEFAFD"
        android:clickable="false"
        android:duplicateParentState="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/txtMix"
        android:textAlignment="textStart"
        android:textColor="#424242" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="20dp"
        android:text="@string/txtTitle"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="29dp"
        android:text="@string/txtIngredients"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="177dp"
        android:text="@string/txtDirections"
        android:textSize="24sp" />

</RelativeLayout>